# TP_CPP_project1_semestr

./: .gitignore  CMakeLists.txt  Makefile  README.md  client.cpp  server.cpp  sync_server.cpp
TP_CPP_parser/: CMakeLists.txt
TP_CPP_parser/parser_lib/: Parser.cpp  Parser.h
TP_CPP_parser/test_project/: CMakeLists.txt  main.cpp
business_logic/: .gitignore  CMakeLists.txt
business_logic/project/include/: handlers.h  jsonData.h  jsonParser.h  wrapperBD.h
business_logic/project/src/: handlers.cpp  jsonData.cpp  jsonParser.cpp  wrapperBD.cpp
business_logic/tests/: tests_handlers.cpp  tests_jsonParser.cpp  tests_wrapperBD.cpp
client/: CMakeLists.txt  ToDo
client/cache/: sessionInformation
client/include/: application.h  audiooutput.h  audiorecorder.h  authorizwindow.h  autorizwindow.h  bottomBoardWidget.h  contactWidget.h  jsonData.h  jsonParser.h  lib.h  mainwidget.h  mainwidget.h.autosave  newdialogwidget.h  registrationwindow.h  serverConnection.h  sync_client.h  waitwindow.h
client/parser/: CMakeLists.txt  Parser.cpp  Parser.h  parser.cpp
client/src/: adf.cpp  application.cpp  audiooutput.cpp  audiorecorder.cpp  authorizwindow.cpp  authorizwindow.ui  autorizwindow.cpp  bottomBoardWidget.cpp  contactWidget.cpp  lib.cpp  main.cpp  mainwidget.cpp  newdialogwidget.cpp  registrationwindow.cpp  registrationwindow.ui  sync_client.cpp  waitwindow.cpp
client/sync_client/: CMakeLists.txt  sync_client.cpp
kust_libs/: CMakeLists.txt
kust_libs/project/businessLogic/include/: handlers.h
kust_libs/project/businessLogic/src/: handlers.cpp
kust_libs/project/parser/include/: parser.h
kust_libs/project/wrapper/include/: DBwrapper.h  dbExceptions.h
kust_libs/project/wrapper/src/: DBwrapper.cpp
networking/: .gitignore  CMakeLists.txt
networking/project/: main.cpp
networking/project/include/: connection.h  handler.h  handlers_chain.h  server.h
networking/project/src/: connection.cpp  handler.cpp  handlers_chain.cpp  server.cpp
networking/tests/: connection_module.cpp  handlers_module.cpp  server_module.cpp
project/: main.cpp
project/businessLogic/include/: blExceptions.h  handlers.h
project/businessLogic/src/: handlers.cpp
project/parser/include/: parser.h
project/parser/src/: parser.cpp
project/wrapper/include/: DBwrapper.h  dbExceptions.h
project/wrapper/src/: DBwrapper.cpp
